# Logger

./: .gitignore  .travis.yml  README.md  build.gradle  checkstyle.xml  gradle.properties
gradle/: maven_push.gradle
logger/: CMakeLists.txt  build.gradle  gradle.properties
logger/src/androidTest/java/com/erlei/logger/: AlignArgsFormatterTest.java  FileUtil.java  PerformanceTest.java  TextFormatStrategyTest.java
logger/src/androidTest/java/com/erlei/logger/writer/: FileAssert.java  LogWriterTest.java  MMAPLogWriterTest.java  Tester.java
logger/src/androidTest/kotlin/com/erlei/logger/: LoggerTest.kt  SimpleArgsFormatterTest.kt
logger/src/main/: AndroidManifest.xml
logger/src/main/cpp/: mmap_writer.cpp  mmap_writer.h
logger/src/main/java/com/erlei/logger/: Level.java  LogFileManager.java  LogLine.java  LogWriterFactory.java  Logger.java  LoggerFactory.java  LoggerPrinter.java  Pools.java  Printer.java
logger/src/main/java/com/erlei/logger/adapter/: AndroidLogAdapter.java  AsyncLogAdapter.java  DiskLogAdapter.java  LogAdapter.java
logger/src/main/java/com/erlei/logger/format/: AlignArgsFormatter.java  ArgsFormatter.java  CsvFormatStrategy.java  FormatStrategy.java  JsonFormatStrategy.java  PrettyFormatStrategy.java  SimpleArgsFormatter.java  TextFormatStrategy.java
logger/src/main/java/com/erlei/logger/printer/: DiskPrintStrategy.java  LogcatPrintStrategy.java  PrintStrategy.java
logger/src/test/java/com/erlei/logger/: CsvFormatStrategyTest.kt  DiskLogAdapterTest.kt  LogAssert.kt  LogcatPrintStrategyTest.kt  PrettyFormatStrategyTest.kt
(+8 files in other folders)
