CMAKE_MINIMUM_REQUIRED(VERSION 3.4.1)

#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/../jniLibs/${ANDROID_ABI})

PROJECT(mmap-writer)

AUX_SOURCE_DIRECTORY(src/main/cpp SRC_LIST)

FIND_LIBRARY(log-lib log)

ADD_LIBRARY(mmap-writer SHARED ${SRC_LIST})

TARGET_LINK_LIBRARIES(mmap-writer ${log-lib})